fix: change read button link

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -6,7 +6,7 @@ hero:
   tagline: This site documents the setup and architecture on CWW's AWS account 
   actions:
     - text: Read
-      link: /architecture/overview/
+      link: /start-here/example/
       icon: right-arrow
       variant: primary
 ---
